[workspace]
members = ["rdxusb-event-test", "rdxusb-protocol", "xtask"]

[package]
name = "rdxusb"
version = "2025.0.0"
edition = "2021"
authors = ["guineawheek <guineawheek@gmail.com>"]

[lib]
name = "rdxusb"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["event-loop", "c-api"]
event-loop = ["dep:tokio"]
c-api = ["event-loop"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive", "extern_crate_std"] }
nusb = { version = "0.1.12", default-features  = false }
tokio = { version = "1.41.1", features = ["full"], optional = true }
rdxusb-protocol = { version = "0.1.0", path = "rdxusb-protocol"}
async-ringbuf = { version = "0.3.1", features = ["alloc"] }
ringbuf = "0.4.7"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
