[package]
name = "rdxusb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rdxusb = { path = "../" }
rdxusb-protocol = { path = "../rdxusb-protocol" }
nusb = { version = "0.1.12", default-features  = false }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
canandmessage = { path = "../../../canandmessage", features = ["all-devices"] }