[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
cargo_toml = "0.21.0"
chrono = "0.4.39"
homedir = "0.3.4"
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
walkdir = "2.5.0"
zip = { version = "2.2.2", features = ["deflate"], default-features = false }
